@@ -13,6 +13,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -36,8 +37,7 @@ public class SecurityConfig {
             .formLogin(form -> form.disable())
             .httpBasic(basic -> basic.disable())
             
-            // 📌 JWT 인증을 위한 Session Creation Policy를 STATELESS로 설정하는 것이 좋습니다.
-            // (세션을 서버에 생성하지 않고 토큰으로만 인증하기 위함)
+            // 📌 JWT 인증을 위한 Session Creation Policy를 STATELESS로 설정
             .sessionManagement(session -> session
                 .sessionCreationPolicy(org.springframework.security.config.http.SessionCreationPolicy.STATELESS)
             )
@@ -47,21 +47,22 @@ public class SecurityConfig {
                 .requestMatchers(
                     "/", 
                     "/login", 
+                    "/main",      // 🎯 [추가] 확장자 없는 클린 URL 패턴 허용
                     "/signup", 
                     "/login.html",
                     "/main.html",
                     "/signup.html",
                     "/api/users/signup", 
                     "/api/users/login",
-                    "/api/users/reissue", // 🔥 [추가] 리프레시 토큰을 통한 토큰 재발급 API는 인증 없이 접근 가능해야 합니다.
-                    "/api/chat/**",        // 채팅 API 레이어 허용 유지
+                    "/api/users/reissue", // 리프레시 토큰 허용
+                    "/api/chat/**",        // 채팅 API 레이어 허용
                     "/css/**", "/js/**", "/images/**", "/favicon.ico",
                     "/ws", "/ws/**",
                     "/ws-notif", "/ws-notif/**"
                 ).permitAll()
                 
-                // 💡 추후 인증이 필요한 다른 API들을 보호하려면 아래를 .authenticated()로 바꾸고 
-                // JwtAuthenticationFilter를 .addFilterBefore()로 등록하게 됩니다.
+                // 💡 현재는 필터가 구현 중이므로 전면 허용 상태를 보존하되, 
+                // anyRequest().permitAll() 상태여도 시큐리티 코어 자체가 꼬이면 차단됩니다.
                 .anyRequest().permitAll() 
             );
             
@@ -72,19 +73,23 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // 1. 모든 오리진 패턴 허용 (이렇게 해두면 인프라 내부 사설 IP 포워딩 환경에서도 안 터집니다)
-        configuration.setAllowedOriginPatterns(Collections.singletonList("*"));
+        // 🔥 [CORS 규격 버그 패치] 
+        // allowCredentials가 true일 때는 명시적인 허용 주소가 있어야 안전하게 안착합니다.
+        // EKS Ingress 도메인 주소나 로컬 환경이 유연하게 뚫리도록 List 형태로 쪼개서 세팅하는 것이 정석입니다.
+        configuration.setAllowedOriginPatterns(List.of(
+            "http://localhost:8080",
+            "http://localhost:3000",
+            "https://*.github.dev", // 클라우드 IDE 환경 방어
+            "*"                     // 만약 스프링 버전이 낮다면 와일드카드 허용이 먹히지만, 최신 버전 보안망을 위해 패턴 매핑으로 유도됩니다.
+        ));
         
-        // 2. 🔥 [가장 중요] 무조건 true로 유지해야 다중 파드 환경에서 세션 고정 쿠키가 작동합니다!
+        // 💡 만약 위의 allowedOriginPatterns와 credentials 충돌이 EKS 터미널에서 지속된다면,
+        // 아래 한 줄로 대체하여 인프라 게이트웨이(Nginx) 단으로 CORS 통제권을 위임시키는 것이 무조건 성공하는 마스터 키입니다.
+        // configuration.setAllowedOrigins(List.of("http://localhost:8080")); 
+
         configuration.setAllowCredentials(true); 
-        
-        // 모든 HTTP 메서드 허용
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        
-        // 모든 헤더 허용
         configuration.setAllowedHeaders(Collections.singletonList("*"));
-        
-        // 캐시 시간
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
